# testing-workshop

./: Cargo.toml  README.md  tarpaulin-report.html
benches/: example.rs
src/: exercises.rs  fibonacci.rs  lib.rs  prime.rs
src/domain/: mod.rs  user_stats.rs
src/exercises/: async_test.rs  basic.rs  cli.rs  filesystem.rs  mod.rs  test_tables.rs
src/repository/: fake_user_repository.rs  mod.rs  user_repository.rs
tests/: integration.rs
