[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
rstest = "0.21.0"
tempfile = "3.10.1"
divan = "0.1.14"

[[bench]]
name = "example"
harness = false
